# agenticqueue

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  learnings.md  openapi.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: build.yml  dep-review.yml  lint.yml  pre-commit.yml  release.yml  scorecard.yml  test.yml
apps/api/: .env.example  Dockerfile  alembic.ini
apps/web/: Dockerfile  README.md  middleware.ts  next.config.ts  package.json  playwright.config.ts
config/: retrieval.yaml
docs/: agents.md  cloud-oidc.md  dev-setup.md  install.md  local-dev-recovery.md  mcp-clients.md  surface-1.0.md
docs/benchmarks/: analytics-dashboard-10k.json  analytics-dashboard-10k.md
docs/security/: threat-model.md
examples/: seed.yaml
policies/: default-coding.policy.yaml
schemas/: learning.schema.json
scripts/: audit_rest_hardening.py  audit_strict_models.py  benchmark_analytics.py  check_no_private_repo_paths.py  generate_openapi.py  verify_pgbouncer_restart.py
task_types/: coding-task.policy.yaml  coding-task.schema.json
test_support/: __init__.py  db_isolation.py
tests/: __init__.py  conftest.py  secret_redaction_support.py  test_audit_rest_hardening.py  timeout_support.py
tests/api/: test_analytics.py  test_decisions.py  test_health.py  test_openapi.py  test_operational_router.py  test_roles.py  test_surface_parity.py
tests/aq/: test_graph_neighborhood.py  test_mcp_fastmcp_compat.py  test_mcp_server.py  test_packet_assembler.py  test_packet_cache.py  test_packet_cli.py  test_packet_golden.py  test_packet_mcp.py  test_packet_rest.py  test_packet_version.py  test_repo_scope.py
tests/audit/: test_audit_query.py
tests/cli/: test_surface_cli.py
tests/context/: test_redaction.py
(+381 files in other folders)
