[project]
name = "agenticqueue-api"
version = "0.1.0"
description = "Migration tooling for the AgenticQueue API."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "pydantic>=2.11.7,<3.0.0",
    "psycopg[binary]>=3.2.9,<4.0.0",
    "pytest>=8.4.1,<9.0.0",
    "pytest-cov>=6.2.1,<7.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src/agenticqueue_api"]

[tool.pytest.ini_options]
pythonpath = ["apps/api/src"]
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]
